template.functions/output.txt
template.functions$ g++ template01.cpp 
template01.cpp: In function ‘int main()’:
template01.cpp:25:26: error: no matching function for call to ‘search(double [20], int&, int)’
   25 |   cout << search(ae, z, 6) << endl;
      |                          ^
template01.cpp:4:26: note: candidate: ‘template<class T> int search(T*, T, int)’
    4 | template<typename T> int search(T* a, T v, int n){
      |                          ^~~~~~
template01.cpp:4:26: note:   template argument deduction/substitution failed:
template01.cpp:25:26: note:   deduced conflicting types for parameter ‘T’ (‘double’ and ‘int’)
   25 |   cout << search(ae, z, 6) << endl;
      |                          ^
template.functions$ 
